# constructor-web-pjecz-gob-mx

./: .gitignore  README.md  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  settings-sample.ini  settings.ini
archivista/templates/: universal.md.jinja2
content/buzon-electronico/: buzon-electronico.md
content/citas/: citas.md
content/consultas/: consultas.md
content/consultas/abogados-registrados/: abogados-registrados.md
content/consultas/agenda-audiencias/: agenda-audiencias.md
content/consultas/audiencias/: audiencias.md
content/consultas/boletas/: boletas.md
content/consultas/edictos/: edictos.md
content/consultas/expediente-virtual/: expediente-virtual.md
content/consultas/fuentes-rss/: fuentes-rss.md
content/consultas/glosas/: glosas.md
content/inicial/: inicial.html
content/js/: consultas-abogados-registrados.js  consultas-edictos.js  consultas-listas-de-acuerdos.js  consultas-peritos.js  consultas-redam.js  consultas-repsvm.js  consultas-sentencias.js  consultas-tesis-jurisprudencias.js  consultas-ubicacion-expedientes.js  tramites-y-servicios.js
content/mujer-segura/: mujer-segura.md
content/poder-en-linea/: aviso-de-privacidad.md  poder-en-linea.md  terminos-condiciones.md
content/politicas-de-uso/: informacion.md  sitio-web.md
content/ponte-trucha/: ponte-trucha.md
content/pontetrucha/: pontetrucha.md
content/sistemas/: sistemas.md
plugins/articles_lists_json/: README.md  __init__.py  articles_lists_json.py
plugins/content_lists_json/: __init__.py  content_lists_json.py
(+69 files in other folders)
