[tool.poetry]
name = "constructor-web-pjecz-gob-mx"
version = "1.0"
description = "Constructor del sitio web del PJECZ para usarse con Pelican"
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL3"

[tool.poetry.dependencies]
python = "^3.10"
pelican = "^4.8.0"
Markdown = "^3.4.1"
archivista = "^0.4.5"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
